--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div id="banner">
-    <h1>My playground app</h1>
+    <h1>My playground</h1>
     <p>This is the important line everyone reads..</p>
     </div>
     <p>
